# data-analysis-starter

./: .gitignore  AGENTS.md  README.md  dashboard.py  pyproject.toml  pyrightconfig.json  taskfile.dbt.yml  taskfile.yml
data/raw/: customers.csv  orders.json
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: customer_order_summary.sql  schema.yml
dbt/models/reporting/: order_dashboard.sql  schema.yml
dbt/models/staging/: schema.yml  stg_customers.sql  stg_orders.sql
