[project]
name = "data-analysis-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "altair>=5.5.0",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.2",
    "pandas>=2.3.0",
    "streamlit>=1.45.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.3",
    "pandas-stubs>=3.0.0.260204",
]
